--- a/00-HTML-CSS-Bootstrap/03-Bootstrap4/Bootstrap_Project_Main.html
+++ b/00-HTML-CSS-Bootstrap/03-Bootstrap4/Bootstrap_Project_Main.html
@@ -4,27 +4,85 @@
     <meta charset="utf-8">
     <title>Project</title>
     <!-- Bootstrap CSS, JS, and jQuery -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- STEP 1: INSERT THE BOOTSTRAP 4 LINKS HERE -->
   </head>
   <body>
 
-    <nav >
+   
       <!--STEP 2:  ADD A DARK NAVBAR HERE WITH A LINK TO A SEPARATE SIGN UP PAGE -->
-    </nav>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item ">
+                <a class="nav-link" href="Bootstrap_Project_Signup.html">Signup <span class="sr-only">(current)</span></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+  
 
-    <div>
+    <div class="container">
       <!-- STEP 3: CREATE A JUMBOTRON HERE WITH A HEADER AND SOME LOREM IPSUM -->
+      <div class="jumbotron">
+          <h1 class="display-4">Hello, world!</h1>
+          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        </div>
     </div>
 
     <!-- STEP 4: FIGURE OUT HOW TO PUT THESE IMAGE LINKS IN A CAROUSEL AT THE BOTTOM OF THE PAGE! -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://images.unsplash.com/photo-1523626752472-b55a628f1acc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2e90eae0238ba64cc447f3be7f522c19&auto=format&fit=crop&w=1575&q=80" class="d-block w-100" alt="none">
+          </div>
+          <div class="carousel-item">
+            <img src="https://images.unsplash.com/photo-1517519014922-8fc06b814a0e?ixlib=rb-0.3.5&s=612f05d638cc31fd235cbfb2d21bcfc0&auto=format&fit=crop&w=1352&q=80" class="d-block w-100" alt="nothing">
+          </div>
+          <div class="carousel-item">
+            <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a?ixlib=rb-0.3.5&s=b40cfb86768850f7623bfcfef2a5ba0f&auto=format&fit=crop&w=1575&q=80" class="d-block w-100" alt="not at all">
+          </div>
+          <div class="carousel-item">
+            <img src="https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=71d59cd22de21da8d2939bc203617983&auto=format&fit=crop&w=1560&q=80" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://images.unsplash.com/photo-1517423568366-8b83523034fd?ixlib=rb-0.3.5&s=d68543202e54ab0235f6d1defcc4dfe7&auto=format&fit=crop&w=1575&q=80" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://images.unsplash.com/photo-1517423738875-5ce310acd3da?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b1523dbf0339fcfcadbe96fe4eb2f8b2&auto=format&fit=crop&w=1410&q=80" class="d-block w-100" alt="...">
+          </div>
 
-   src="https://images.unsplash.com/photo-1523626752472-b55a628f1acc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2e90eae0238ba64cc447f3be7f522c19&auto=format&fit=crop&w=1575&q=80"
-   src="https://images.unsplash.com/photo-1517519014922-8fc06b814a0e?ixlib=rb-0.3.5&s=612f05d638cc31fd235cbfb2d21bcfc0&auto=format&fit=crop&w=1352&q=80"
-   src="https://images.unsplash.com/photo-1517849845537-4d257902454a?ixlib=rb-0.3.5&s=b40cfb86768850f7623bfcfef2a5ba0f&auto=format&fit=crop&w=1575&q=80"
-   src="https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=71d59cd22de21da8d2939bc203617983&auto=format&fit=crop&w=1560&q=80"
-   src="https://images.unsplash.com/photo-1517423568366-8b83523034fd?ixlib=rb-0.3.5&s=d68543202e54ab0235f6d1defcc4dfe7&auto=format&fit=crop&w=1575&q=80"
-   src="https://images.unsplash.com/photo-1517423738875-5ce310acd3da?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b1523dbf0339fcfcadbe96fe4eb2f8b2&auto=format&fit=crop&w=1410&q=80"
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+   
+   
+   
+   
+   
+   
 
   </body>
 </html>
